--- a/njayan90.github.io/index.html
+++ b/njayan90.github.io/index.html
@@ -6,16 +6,15 @@
 </head>
 
 <body>
-    
     <header id="myHeader" class="top">
     </header>
     <main id="myMain">
-
     </main>
     <footer id="myFooter">
-
     </footer>
-    <script type="module" src="script.js"></script>
+    <script src="model.js"></script>
+    <script src="control.js"></script>
+    <script src="view.js"></script>
 </body>
 
 </html>
