--- a/njayan90.github.io/index.html
+++ b/njayan90.github.io/index.html
@@ -12,9 +12,9 @@
     </main>
     <footer id="myFooter">
     </footer>
-    <script src="model.js"></script>
-    <script src="control.js"></script>
-    <script src="view.js"></script>
+    <script type='module' src="view.js"></script>
+    <script type='module' src="model.js"></script>
+    <script type='module' src="control.js"></script>
 </body>
 
 </html>
